--- a/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Sheffle/en.lproj/MainStoryboard_iPhone.storyboard
@@ -11,17 +11,41 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eFj-2Q-E3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="vGJ-vY-2gb" customClass="SFShelfViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="LV7-pb-UuH">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="56" sectionHeaderHeight="22" sectionFooterHeight="22" id="LV7-pb-UuH">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="eHp-6b-RAa">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="vGJ-vY-2gb" id="FZq-OB-n5l"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShelfCell" id="kyd-Kd-Pov">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShelfCell" textLabel="tla-u5-0pn" detailTextLabel="PYn-fI-J2B" rowHeight="56" style="IBUITableViewCellStyleSubtitle" id="kyd-Kd-Pov">
+                                <rect key="frame" x="0.0" y="66" width="320" height="56"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tla-u5-0pn">
+                                            <rect key="frame" x="10" y="8" width="38" height="22"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PYn-fI-J2B">
+                                            <rect key="frame" x="10" y="30" width="47" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
@@ -30,16 +54,37 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Shelf" id="aLB-5f-Azz">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="vgO-5J-HVp">
-                            <connections>
-                                <action selector="addButtonDidTap:" destination="vGJ-vY-2gb" id="4mi-dH-uPp"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Shelf" id="aLB-5f-Azz"/>
+                    <connections>
+                        <outlet property="searchBar" destination="eHp-6b-RAa" id="FfZ-Uk-Zhv"/>
+                        <outlet property="searchDisplayController" destination="Gh2-9Q-iqE" id="mQM-Tk-H2c"/>
+                    </connections>
                 </tableViewController>
+                <searchDisplayController id="Gh2-9Q-iqE">
+                    <connections>
+                        <outlet property="delegate" destination="vGJ-vY-2gb" id="jL2-51-rlW"/>
+                        <outlet property="searchBar" destination="eHp-6b-RAa" id="rvG-2S-FIY"/>
+                        <outlet property="searchContentsController" destination="vGJ-vY-2gb" id="fX6-gB-ls7"/>
+                        <outlet property="searchResultsDataSource" destination="vGJ-vY-2gb" id="u4X-PF-ogF"/>
+                        <outlet property="searchResultsDelegate" destination="vGJ-vY-2gb" id="CEc-aV-nPO"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="267" y="-49"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rfk-hA-R73">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Dv-IY-1oP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="VQD-7P-aen" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Eu-t4-yRu">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="770" y="-307"/>
         </scene>
         <!--Book View Controller-->
         <scene sceneID="gI9-Kb-Zf8">
@@ -54,7 +99,7 @@
                     <navigationItem key="navigationItem" id="DQT-qT-1qj"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="726" y="-49"/>
+            <point key="canvasLocation" x="770" y="293"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1fj-et-YaO">
@@ -72,6 +117,17 @@
             <point key="canvasLocation" x="-180" y="-49"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="SFBookViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFBookViewController.h"/>
+        </class>
+        <class className="SFShelfViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SFShelfViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
